# DataGuard_RiseInStellar

./: .env.example  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  ARCHITECTURE.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  DOCKER_SETUP.md  FILE_STRUCTURE.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
backend/: .env.example  README.md  package-lock.json  package.json  server.js
backend/controllers/: dataset.controller.js
backend/models/: Dataset.model.js
backend/routes/: auth.routes.js  dataset.routes.js  verify.routes.js  wallet.routes.js
contracts/: README.md
contracts/data_verification/: Cargo.toml
contracts/data_verification/src/: lib.rs
contracts/dataset_registry/: Cargo.toml
contracts/dataset_registry/src/: lib.rs
src/: App.jsx  index.css
src/components/: AnimatedBackground.jsx  Navbar.jsx  Toast.jsx
src/context/: AuthContext.jsx  ToastContext.jsx  WalletContext.jsx
src/pages/: BrowsePage.jsx  Dashboard.jsx  LandingPage.jsx  UpdatePage.jsx  UploadPage.jsx  VerifyPage.jsx
src/services/: apiService.js  hashService.js  stellarService.js  walletService.js
