[package]
name = "data_verification"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
soroban-sdk = { version = "20.0.0", features = ["client", "derive"] }
soroban-auth = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
